import org.apache.tools.ant.filters.ReplaceTokens

plugins {
  id("java")
  id("java-test-fixtures")
  id("configure-jacoco")
  id("me.champeau.jmh")
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

dependencies {
  compileOnly libs.jspecify
  compileOnly libs.lombok
  annotationProcessor libs.lombok
  jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
  jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

test {
  useJUnitPlatform()
  failOnNoDiscoveredTests = false
}

tasks.withType(Test).configureEach {
  maxParallelForks = 2
  forkEvery = 100
  jvmArgs += "--enable-preview"
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += "--enable-preview"
}


processResources {
  filter(ReplaceTokens, tokens: [])
}
